// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Ads Snapshots should correctly render an AMP leaderboard ad 1`] = `
.c0 {
  background-color: #F8F8F8;
  margin-top: 0.5rem;
}

.amp-geo-pending .c3,
.amp-geo-group-gbOrUnknown .c3 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin: 0 auto;
  text-align: center;
}

.c2 {
  display: none;
  visibility: hidden;
}

.c4 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #5A5A5A;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  display: block;
  padding: 0.5rem 0;
  text-align: right;
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:20rem) {
  .c2 {
    min-height: 5.125rem;
    display: inline-block;
    visibility: visible;
  }
}

@media (min-width:63rem) {
  .c2 {
    min-height: 17.625rem;
    padding: 0.5rem 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

<html>
  <head>
    <script
      async="true"
      custom-element="amp-ad"
      src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
    />
    <script
      async="true"
      custom-element="amp-access"
      src="https://cdn.ampproject.org/v0/amp-access-0.1.js"
    />
    <script
      id="amp-access"
      type="application/json"
    >
      {"authorization":"https://mock-toggles-endpoint.bbc.co.uk?application=simorgh&service=afrique","noPingback":true,"authorizationFallbackResponse":{"error":true}}
    </script>
  </head>
  <body>
    <div>
      <section
        aria-hidden="true"
        aria-label="Publicités"
        class="c0"
        data-e2e="advertisement"
        role="region"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
            >
              <a
                class="c4"
                dir="ltr"
                href="https://www.bbc.com/usingthebbc/cookies/"
                tabindex="-1"
              >
                Publicités
              </a>
              <div>
                <amp-ad
                  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
                  data-amp-slot-index="0"
                  data-block-on-consent="default"
                  data-multi-size="320x50,300x50"
                  data-npa-on-unknown-consent="true"
                  data-slot="/4817/bbccom.test.site.amp.news"
                  height="50"
                  json="{\\"targeting\\":{\\"slot\\":\\"leaderboard\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"afrique\\"}}"
                  media="(max-width: 62.9375rem)"
                  type="doubleclick"
                  width="320"
                />
                <amp-ad
                  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
                  data-amp-slot-index="0"
                  data-block-on-consent="default"
                  data-multi-size="970x250,728x90"
                  data-npa-on-unknown-consent="true"
                  data-slot="/4817/bbccom.test.site.amp.news"
                  height="250"
                  json="{\\"targeting\\":{\\"slot\\":\\"leaderboard\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"afrique\\"}}"
                  media="(min-width: 63rem)"
                  type="doubleclick"
                  width="970"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>
</html>
`;

exports[`AMP Ads Snapshots should correctly render an AMP mpu ad 1`] = `
<html>
  <head>
    <script
      async="true"
      custom-element="amp-ad"
      src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
    />
    <script
      async="true"
      custom-element="amp-access"
      src="https://cdn.ampproject.org/v0/amp-access-0.1.js"
    />
    <script
      id="amp-access"
      type="application/json"
    >
      {"authorization":"https://mock-toggles-endpoint.bbc.co.uk?application=simorgh&service=afrique","noPingback":true,"authorizationFallbackResponse":{"error":true}}
    </script>
  </head>
  <body>
    .c0 {
  background-color: #F8F8F8;
  margin-top: 0.5rem;
}

.amp-geo-pending .c3,
.amp-geo-group-gbOrUnknown .c3 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin: 0 auto;
  text-align: center;
}

.c2 {
  display: none;
  visibility: hidden;
  padding: 0;
}

.c4 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #5A5A5A;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  display: block;
  padding: 0.5rem 0;
  text-align: right;
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:18.75rem) {
  .c2 {
    min-height: 17.6875rem;
    display: inline-block;
    visibility: visible;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

<div>
      <section
        aria-hidden="true"
        aria-label="Publicités 2"
        class="c0"
        data-e2e="advertisement"
        role="region"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
            >
              <a
                class="c4"
                dir="ltr"
                href="https://www.bbc.com/usingthebbc/cookies/"
                tabindex="-1"
              >
                Publicités
              </a>
              <div>
                <amp-ad
                  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
                  data-amp-slot-index="0"
                  data-block-on-consent="default"
                  data-multi-size="300x250"
                  data-npa-on-unknown-consent="true"
                  data-slot="/4817/bbccom.test.site.amp.news"
                  height="250"
                  json="{\\"targeting\\":{\\"slot\\":\\"mpu\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"afrique\\"}}"
                  type="doubleclick"
                  width="300"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>
</html>
`;
